Bug 305272 - won't compile on debian squeeze
Summary: won't compile on debian squeeze
Status: RESOLVED FIXED
Alias: None
Product: massif-visualizer
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR critical
Target Milestone: 0.2
Assignee: Massif Visualizer developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-16 16:02 UTC by Jan Spurny
Modified: 2012-08-17 13:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Spurny 2012-08-16 16:02:09 UTC
after make:

1)
/home/jspurny/src-other/massif-visualizer/app/mainwindow.cpp:170: error: ‘Monospace’ is not a member of ‘QFont’

The offending line is:
 "font.setStyleHint(QFont::Monospace);"
so I changed it to:
 "font.setStyleHint(QFont::TypeWriter);"

this file now compiles, but there's another bug:

2) 
/home/jspurny/src-other/massif-visualizer/test/massifparser.cpp:27:25: error: QElapsedTimer: No such file or directory
/home/jspurny/src-other/massif-visualizer/test/massifparser.cpp: In function ‘int main(int, char**)’:
/home/jspurny/src-other/massif-visualizer/test/massifparser.cpp:49: error: ‘QElapsedTimer’ was not declared in this scope
/home/jspurny/src-other/massif-visualizer/test/massifparser.cpp:49: error: expected ‘;’ before ‘t’
/home/jspurny/src-other/massif-visualizer/test/massifparser.cpp:50: error: ‘t’ was not declared in this scope

Now I'm lost.

Seems to me that I have a different kde/qt/whatever libraries/headers. CMake should probably check for that and do not allow me to discover this when compiling..


Reproducible: Always

Steps to Reproduce:
1. get git source:
 git clone git://anongit.kde.org/massif-visualizer
2. follow INSTALL instructions:
 mkdir build
 cd build
 cmake ..
 make

Actual Results:  
/home/jspurny/src-other/massif-visualizer/test/massifparser.cpp:27:25: error: QElapsedTimer: No such file or directory
/home/jspurny/src-other/massif-visualizer/test/massifparser.cpp: In function ‘int main(int, char**)’:
/home/jspurny/src-other/massif-visualizer/test/massifparser.cpp:49: error: ‘QElapsedTimer’ was not declared in this scope
/home/jspurny/src-other/massif-visualizer/test/massifparser.cpp:49: error: expected ‘;’ before ‘t’
/home/jspurny/src-other/massif-visualizer/test/massifparser.cpp:50: error: ‘t’ was not declared in this scope
make[2]: *** [test/CMakeFiles/massifparser.dir/massifparser.o] Error 1
make[1]: *** [test/CMakeFiles/massifparser.dir/all] Error 2
make: *** [all] Error 2


Expected Results:  
no errors, working massif-visualizer
Comment 1 Jan Spurny 2012-08-16 16:15:34 UTC
I dig deeper and found just that QTElapsedTimer is used only to print some debug message, so I commented it out in "test/massifparser.cpp" and it compiles.

But I would still consider it a very serious bug, since it makes massif-visualizer very difficult to build.
Comment 2 Milian Wolff 2012-08-16 17:47:37 UTC
Can you tell me what Qt version you are using? See e.g. "$kdeapp --version", e.g.:

$ kwrite --version
Qt: 4.8.2
KDE Development Platform: 4.9.00
KWrite: 4.8.4 (4.8.4)
Comment 3 Jan Spurny 2012-08-16 17:53:02 UTC
Qt: 4.6.3
KDE Development Platform: 4.4.5 (KDE 4.4.5)

On Thu, 16 Aug 2012 19:47:37 +0200 (CEST)
Milian Wolff <mail@milianw.de> wrote:

> https://bugs.kde.org/show_bug.cgi?id=305272
> 
> --- Comment #2 from Milian Wolff <mail@milianw.de> ---
> Can you tell me what Qt version you are using? See e.g. "$kdeapp --version",
> e.g.:
> 
> $ kwrite --version
> Qt: 4.8.2
> KDE Development Platform: 4.9.00
> KWrite: 4.8.4 (4.8.4)
> 
> -- 
> You are receiving this mail because:
> You reported the bug.
Comment 4 Milian Wolff 2012-08-17 13:10:50 UTC
Git commit 849df44038116f042095810c5923c6cf4139c736 by Milian Wolff.
Committed on 17/08/2012 at 15:08.
Pushed by mwolff into branch 'master'.

Increase compatibility with older Qt versions.

M  +1    -1    app/mainwindow.cpp
M  +5    -0    test/massifparser.cpp

http://commits.kde.org/massif-visualizer/849df44038116f042095810c5923c6cf4139c736