Increase compatibility with older Qt versions.

BUG: 305272